[package]
name = "rate-limiter"
version = "0.1.0"
authors = ["Nicolas Lara <nicolaslara@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
# Use the verbose responses feature if you want to include information about
# the remaining quotas in the SendPacket/RecvPacket responses
verbose_responses = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""
[dependencies]
cosmwasm-std = {version = "2.1.0", features = ["cosmwasm_2_0", "std"]}
cosmwasm-schema = {version = "2.1.0", default-features = false}
cosmwasm-storage = "1"
cw-storage-plus = "2"
cw2 = "2"
schemars = "0.8.15"
serde = {version = "1.0.188", features = ["derive"], default-features = false}
thiserror = "1.0.49"
prost = "0.12.3"
neutron-std = "4.2.2-rc"
sha2 = "0.10.6"
hex = "0.4.3"

[dev-dependencies]
cw-multi-test = "2.1.1"
serde-json-wasm = "1.0.0"
itertools = "0.10"